--- a/README.html
+++ b/README.html
@@ -1,103 +1,87 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>我最喜欢的两款 AI 产品</title>
-  <style>
-    body {
-      font-family: "Helvetica Neue", sans-serif;
-      background: #f9fafb;
-      margin: 0;
-      padding: 2rem;
-      color: #333;
-    }
+# 我最喜爱的两款 AI 产品
 
-    h1 {
-      text-align: center;
-      font-size: 2.5rem;
-      margin-bottom: 2rem;
-    }
+我最喜爱的 2 款 AI 产品分别是 AI 检索工具 **Perplexity** 和 AI 生成会议纪要平台 **Accunote**。
 
-    .product {
-      background: white;
-      border-radius: 16px;
-      padding: 1.5rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-    }
+---
 
-    .product h2 {
-      font-size: 1.75rem;
-      margin-bottom: 0.5rem;
-    }
+## Perplexity
 
-    .tag {
-      display: inline-block;
-      background: #e5e7eb;
-      color: #111827;
-      border-radius: 999px;
-      padding: 0.2rem 0.8rem;
-      font-size: 0.85rem;
-      margin-left: 0.5rem;
-    }
+### 产品介绍
 
-    .section-title {
-      font-weight: bold;
-      margin-top: 1rem;
-      color: #111827;
-    }
+Perplexity AI 是一款基于 RAG 技术的 AI 问答与信息检索工具，其核心产品逻辑是将搜索引擎与大型语言模型相结合，提供具有出处引用的回答，避免 hallucination，提高信息的准确性与可追溯性。
 
-    .section-text {
-      margin: 0.25rem 0 1rem;
-      line-height: 1.6;
-    }
+### 我的 Aha Moment
 
-    footer {
-      text-align: center;
-      margin-top: 4rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <h1>我最喜爱的两款 AI 产品</h1>
+当我第一次提问关于欧洲和美国市场的问题时，Perplexity 不仅提供了答案，还直接列出了来自彭博社、公司官网、外国智库等多家权威媒体的链接，且总结非常精炼准确，我可以一键跳转原文核查细节。这让我意识到：它并不是“替代 Google”，而是把 Google 搜出来的东西真正“读懂”后呈现给我了。而且我可以用 Perplexity 生成长篇的市场调研报告或者整理合作商家的信息，准确度比其他的大语言模型高很多。
 
-  <div class="product">
-    <h2>Perplexity <span class="tag">通用型 Agent</span></h2>
-    <div class="section-title">🌟 Aha Moment</div>
-    <div class="section-text">
-      多步推理、主动追问、引文透明性强，极大提高调研效率。精准总结长文档内容，是学术学习和市场分析的利器。
-    </div>
-    <div class="section-title">⚠️ 不足之处</div>
-    <div class="section-text">
-      中文能力稍弱，搜索结果缺乏路径记录与可视化；不支持项目级 Workspace。
-    </div>
-    <div class="section-title">🛠 如果我是 PM 我会...</div>
-    <div class="section-text">
-      增加搜索链路图谱展示搜索流程；引入 GPT-4o 提升中文质量；开发 Workspace 实现多项目管理。
-    </div>
-  </div>
+### 不及预期的功能与体验
 
-  <div class="product">
-    <h2>Accunote <span class="tag">非通用型 Agent</span></h2>
-    <div class="section-title">🌟 Aha Moment</div>
-    <div class="section-text">
-      能自动识别 Zoom 会议重点，生成摘要和待办事项，准确识别“谁对谁布置任务”，极大减少会议后的整理负担。
-    </div>
-    <div class="section-title">⚠️ 不足之处</div>
-    <div class="section-text">
-      中文识别准确度偏低，尤其在多口音场景下；无法与 Notion、飞书等工具直接同步。
-    </div>
-    <div class="section-title">🛠 如果我是 PM 我会...</div>
-    <div class="section-text">
-      引入 Whisper + 大模型二次纠错提升多语言处理能力；打通主流协作平台接口；引入项目维度的多轮会议追踪功能。
-    </div>
-  </div>
+- **搜索深度**：对小语种、冷门内容、墙内内容（如中文论文、知乎、微信公众号）覆盖弱，部分内容“搜不到”。
+- **对话记忆能力**：虽然有“Copilot”连续追问功能，但它不像 ChatGPT 有稳定的长记忆，跳出页面后容易丢失上下文。
+- **内容整合能力**：在涉及多层逻辑推理时，Perplexity 有时只是列出几个段落拼接而非真正整合分析。
+- **界面交互**：用户提问后不能对引用链接进行“筛选或权重调节”，也不能手动添加来源文献，只能被动接受它的引用选择。
 
-  <footer>
-    由 ChatGPT 协助生成 · HTML 可视化网页版本
-  </footer>
-</body>
-</html>
+### 产品优化方案
+
+如果我是 Perplexity 的产品经理，我会从产品定位、核心体验和用户粘性三个维度，针对“不及预期”的功能进行优化。以下是分点阐述：
+
+#### ① 搜索深度覆盖不足 → 构建本地化/领域化知识插件体系
+
+- 引入插件/源头集成机制：参考 ChatGPT 的插件系统，开放“来源拓展”接口，如集成 arXiv CN、知乎热榜、微信公众号索引等。
+- 地理语义增强搜索：根据提问语境，优先调取本地来源；或设置“地域偏好”参数供用户选择。
+
+#### ② Copilot 连续对话体验差 → 构建稳定的上下文记忆框架
+
+- 引入搜索链路图谱：使用图数据库或多轮对话的分层状态管理，使同一个聊天的搜索链路变成树状的，并展示 CoT 流程。
+- 改善 Workspace 功能：可以给对话设置主题来提高复用与历史追踪效率，标记对话结论并追问下一步问题以提升回答的连续性。
+
+#### ③ 内容整合能力弱 → 引入结构化摘要模板 + 多模型协同
+
+- 结构化模板生成功能：加入“回答风格”选项，允许用户选择“对比分析”“利弊总结”“市场调研报告”“文献综述”等摘要形式。
+- 多模型投票机制：联合 Claude、GPT、Mistral 输出 2-3 种答案，让用户挑选其较为认可的回答，最终输出最佳答案，结合众多用户的偏好数据来优化回答内容框架。
+
+#### ④ 界面交互不足 → 引用机制增强 + 用户主动参与
+
+- 来源权重设置功能：让用户提前设置“偏好来源”，系统据此调整检索排序。
+- 引用亮点高亮：在原文链接中高亮答案出处语句，提升核查效率（如 Elicit 的方式）。
+
+---
+
+## Accunote
+
+### 产品介绍
+
+Accunote 是一款专注于自动生成会议纪要的垂直类 AI 工具，主要服务对象是高频开会的企业用户、创业团队和远程协作组织。它通过集成视频会议平台（如 Zoom、Google Meet）、本地音频上传或自动录音，结合语音识别与大模型处理，实现从语音到结构化纪要的自动转化。
+
+### 我的 Aha Moment
+
+当我上传一段一小时的投资人路演录音时，Accunote 可以自动提炼出对话的层次结构和核心问题，不是机械地记录所有听到的对话，而是自己可以对内容总结精炼，并能较为准确地识别出英文术语。整个过程不到十分钟。这让我意识到，它不仅是个听写工具，而是真正懂得“会议结构”的智能助理。
+
+### 不及预期的功能与体验
+
+- 多说话人分离效果一般：在多人同时插话或语音重叠时，容易混淆发言人标签，影响纪要的可读性。
+- 中文支持不如英文成熟：中文会议在摘要准确性、逻辑提取上明显弱于英文，尤其在术语识别和情感语气把握方面。
+- 结构格式固定：虽然有摘要与行动点，但缺乏自由定制的模板，对有定制化格式要求的高阶用户限制较大。
+- 权限与隐私处理略显粗糙：上传内容默认保存于云端，虽然声称加密，但对数据敏感用户（如 VC、律所）依旧不够安心，缺乏本地化部署或清晰的数据生命周期说明。
+
+### 产品优化方案
+
+#### 多说话人分离效果一般 → 引入主动校准系统并升级交叉说话检测算法
+
+- 主动式说话人校准：用户在回顾时可点击一句话，快速重标“是谁说的”，系统自动学习。
+- 交叉说话检测算法升级：引入 VAD（语音活动检测）+ ASR 区分逻辑语义块 vs 噪音块，提高切割粒度。
+
+#### 中文语义理解弱 → 构建“行业术语包 + 摘要风格选择”能力
+
+- 行业语料库定制：如“投融资用语包”、“医药行业通用术语包”等，用户可上传自定义词典。
+- 支持“摘要风格选择”：如简洁版、决策导向（项目推进视角）、客户导向（偏销售/UX）
+
+#### 输出结构死板 → 开发“可视化纪要模板系统”
+
+- 可拖拽式结构模板：用户可自定义纪要框架（如：开场/问题/反馈/决议），保存为模板，会议调用
+- 插件化纪要输出：支持输出为 Notion、Word、PPT 结构
+
+#### 数据隐私顾虑 → 引入企业级部署与加密选项
+
+- 提供本地部署方案：通过 Docker 包在公司内网运行，端到端加密传输与本地缓存删除策略。
+- “不留痕模式”：会后系统自动清空原始音频，仅保留纯文本摘要。
